Add '25w46a' sources